@@ -5,6 +5,10 @@ Changelog for Poi
 1.3 (unreleased)
 ----------------
 
+- Added upgrade step to remove the local Manager role from all tracker
+  managers and instead give them the TrackerManager role.
+  [maurits]
+
 - Define our permissions in zcml and configure them in rolemap.xml.
   [maurits]
 
